Fix lack of wrapping on show=creq

--- a/common/layout/page/creq.css
+++ b/common/layout/page/creq.css
@@ -108,6 +108,7 @@
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
+	flex-wrap: wrap;
 	margin: 1px 1px 0px 6px;
 }
 
